--- a/KFrontend/Frontend/src/app/footer/footer.component.html
+++ b/KFrontend/Frontend/src/app/footer/footer.component.html
@@ -1,1 +1,13 @@
-<p>footer works!</p>
+<footer>
+  <p>© 2024 FormSoftware Games. All rights reserved. This frontend project is dedicated to showcasing the creative prowess and technological innovation behind FormSoftware Games. From captivating forms to immersive gameplay experiences, we strive to push the boundaries of interactive entertainment. Join us on our journey as we continue to craft unforgettable digital experiences for gamers worldwide.
+  </p>
+  <mat-divider></mat-divider>
+  <p>
+    <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="phone"></mat-icon>
+    Phone: 00 00 000 0000
+  </p>
+  <p>
+    <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="email"></mat-icon>
+    Email: fromsoftwaregames(a)fromsoftwaregames.com
+  </p>
+</footer>
