little preview if everything is allright

--- a/KFrontend/Frontend/src/app/app.component.html
+++ b/KFrontend/Frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-navigation></app-navigation>
 
-<router-outlet></router-outlet>
+<main>
+  <router-outlet></router-outlet>
+</main>
 
 <app-footer></app-footer>
