--- a/KFrontend/Frontend/src/app/footer/footer.component.scss
+++ b/KFrontend/Frontend/src/app/footer/footer.component.scss
@@ -3,7 +3,7 @@ footer{
   min-height: 100px;
   text-align:center;
   vertical-align: center;
-  background-color: rgb(70,70,70);
+  background-color: rgb(0, 0, 0);
 }
 
 mat-divider{
