--- a/KFrontend/Frontend/src/app/home/home.component.html
+++ b/KFrontend/Frontend/src/app/home/home.component.html
@@ -1,6 +1,20 @@
-<h1>Games Preview</h1>
 
-<div *ngFor="let game of games" style="display: grid; grid-template-columns: auto auto;padding: 25px;">
-  <img [src]="game.gameCover" alt="" style="height: 100px;">
-  <p>{{game.gameName}}</p>
-</div>
+<section class="slider-section clear">
+  <ul class='slider'>
+    <li class='item' *ngFor="let item of games" [style.background-image]="'url(' + item.gameCover + ')'">
+      <div class='content'>
+        <h2 class='title'>{{ item.gameName }}</h2>
+        <p class='description'>Release Date: {{ item.releaseDate}}</p>
+        <button (click)="readMore(item)">Read More</button>
+      </div>
+    </li>
+  </ul>
+  <div class='nav'>
+    <button 
+      mat-raised-button
+      name="arrow-back-outline" (click)="moveSlider('prev')"
+      >
+        Next Game
+      </button>
+  </div>
+</section>
