--- a/KFrontend/Frontend/src/app/navigation/navigation.component.html
+++ b/KFrontend/Frontend/src/app/navigation/navigation.component.html
@@ -10,34 +10,25 @@
     <button mat-menu-item routerLink="/list-games">List Games</button>
   </mat-menu>
   
-  <!-- <button 
-    mat-stroked-button 
-    routerLink="/register"
-    *ngIf="!this.api.isLoggedIn()"
-  > -->
   <button 
     mat-stroked-button 
     routerLink="/register"
+    *ngIf="!this.api.isLoggedIn()"
   >
     Register
   </button>
 
-  <!-- <button 
-    mat-flat-button 
-    color="accent" 
-    routerLink="/login"
-    *ngIf="!this.api.isLoggedIn()"
-  > -->
   <button 
     mat-flat-button 
     color="accent" 
     routerLink="/login"
+    *ngIf="!this.api.isLoggedIn()"
   >
     <mat-icon aria-hidden="false" arial-label="" fontIcon="login"></mat-icon>
     Login
   </button>
 
-  <!-- <button 
+  <button 
     mat-stroked-button 
     color="accent" 
     routerLink="/logout"
@@ -45,5 +36,5 @@
   >
     <mat-icon aria-hidden="false" arial-label="" fontIcon="logout"></mat-icon>
     Logout
-  </button> -->
+  </button>
 </nav>
