--- a/KFrontend/Frontend/src/app/login/login.component.html
+++ b/KFrontend/Frontend/src/app/login/login.component.html
@@ -3,13 +3,13 @@
 
 
 <mat-form-field appearance="outline">
-  <mat-label>Email address</mat-label>
+  <mat-label>Username</mat-label>
   <input
       matInput
       [(ngModel)]="this.loginModel.userName"
       >
   <mat-icon matSuffix>email</mat-icon>
-  <mat-hint>Your registered email address</mat-hint>
+  <mat-hint>Your registered username</mat-hint>
   <!-- <mat-error *ngIf="this.username.invalid">{{getEmailErrorMessage()}}</mat-error> -->
 </mat-form-field>
 
