small changes to the footer

--- a/KFrontend/Frontend/src/app/footer/footer.component.html
+++ b/KFrontend/Frontend/src/app/footer/footer.component.html
@@ -1,4 +1,5 @@
 <footer>
+  <mat-divider></mat-divider>
   <p>© 2024 FormSoftware Games. All rights reserved. This frontend project is dedicated to showcasing the creative prowess and technological innovation behind FormSoftware Games. From captivating forms to immersive gameplay experiences, we strive to push the boundaries of interactive entertainment. Join us on our journey as we continue to craft unforgettable digital experiences for gamers worldwide.
   </p>
   <mat-divider></mat-divider>
