description property added to the entities

--- a/KFrontend/Frontend/src/app/list-bosses/list-bosses.component.html
+++ b/KFrontend/Frontend/src/app/list-bosses/list-bosses.component.html
@@ -19,7 +19,7 @@
       <mat-divider></mat-divider>
       <button
         mat-stroked-button
-        [routerLink]="['', boss.bossName]"
+        [routerLink]="['/view-boss/', boss.bossName]"
       >
         <mat-icon arial-hidden="false"  aria-label="Edit icon" fontIcon="edit">
         </mat-icon>
