--- a/KFrontend/Frontend/src/app/view-boss/view-boss.component.html
+++ b/KFrontend/Frontend/src/app/view-boss/view-boss.component.html
@@ -1,1 +1,5 @@
-<p>view-boss works!</p>
+<p>{{this.boss.bossName}}</p>
+<p>{{this.boss.hp}}</p>
+<p>{{this.boss.id}}</p>
+<p>{{this.boss.souls}}</p>
+<p>{{this.boss.description}}</p>
