--- a/KFrontend/Frontend/src/app/list-bosses/list-bosses.component.scss
+++ b/KFrontend/Frontend/src/app/list-bosses/list-bosses.component.scss
@@ -28,6 +28,7 @@ mat-card {
   img {
     border-radius: 20px;
     height: 150px;
+    max-width: 260px;
     display: block;
     margin: auto;
   }
