--- a/KFrontend/Frontend/src/app/create-boss/create-boss.component.html
+++ b/KFrontend/Frontend/src/app/create-boss/create-boss.component.html
@@ -1,6 +1,15 @@
 <h1>Create Boss</h1>
 
 <mat-form-field appearance="outline">
+    <mat-label>ID</mat-label>
+    <input matInput
+        disabled
+        [(ngModel)]="this.boss.id">
+    <mat-icon matSuffix>text_fields</mat-icon>
+    <mat-hint>ID of the boss</mat-hint>
+</mat-form-field>
+
+<mat-form-field appearance="outline">
     <mat-label>Boss Name</mat-label>
     <input matInput
         [(ngModel)]="this.boss.bossName">
