--- a/KFrontend/Frontend/src/app/create-boss/create-boss.component.html
+++ b/KFrontend/Frontend/src/app/create-boss/create-boss.component.html
@@ -41,7 +41,7 @@
   <input matInput
       [(ngModel)]="this.boss.hp">
   <mat-icon matSuffix>text_fields</mat-icon>
-  <mat-hint>Hp of the subject</mat-hint>
+  <mat-hint>Hp of the boss</mat-hint>
 </mat-form-field>
 
 <mat-form-field appearance="outline">
@@ -49,7 +49,7 @@
     <input matInput
         [(ngModel)]="this.boss.defense">
     <mat-icon matSuffix>text_fields</mat-icon>
-    <mat-hint>Image link of the subject</mat-hint>
+    <mat-hint>Defense of the boss</mat-hint>
 </mat-form-field>
 
 <mat-form-field appearance="outline">
@@ -57,14 +57,14 @@
     <input matInput
         [(ngModel)]="this.boss.souls">
     <mat-icon matSuffix>text_fields</mat-icon>
-    <mat-hint>Credit value of the subject</mat-hint>
+    <mat-hint>Souls dropped upon death</mat-hint>
 </mat-form-field>
 
 <mat-form-field appearance="outline">
     <mat-label>Boss Description</mat-label>
     <textarea matInput 
         [(ngModel)]="this.boss.description"></textarea>
-    <mat-hint>Number of registered students for the subject</mat-hint>
+    <mat-hint>Description of the boss</mat-hint>
 </mat-form-field>
 
 <mat-form-field appearance="outline">
