--- a/KFrontend/Frontend/src/app/navigation/navigation.component.html
+++ b/KFrontend/Frontend/src/app/navigation/navigation.component.html
@@ -9,6 +9,7 @@
     <button mat-menu-item routerLink="/list-bosses">List Bosses</button>
     <button mat-menu-item routerLink="/list-games">List Games</button>
     <button mat-menu-item routerLink="/create-boss" *ngIf="this.api.isLoggedIn()">Create Boss</button>
+    <button mat-menu-item routerLink="/create-game" *ngIf="this.api.isLoggedIn()">Create Game</button>
   </mat-menu>
   
   <button 
