--- a/KFrontend/Frontend/src/app/create-game/create-game.component.html
+++ b/KFrontend/Frontend/src/app/create-game/create-game.component.html
@@ -14,7 +14,7 @@
     <input matInput
         [(ngModel)]="this.game.gameName">
     <mat-icon matSuffix>text_fields</mat-icon>
-    <mat-hint>Name of the teacher</mat-hint>
+    <mat-hint>Name of the game</mat-hint>
 </mat-form-field>
 
 <mat-form-field appearance="outline">
