--- a/KFrontend/Frontend/src/app/navigation/navigation.component.html
+++ b/KFrontend/Frontend/src/app/navigation/navigation.component.html
@@ -1,42 +1,60 @@
 <nav>
-  <button mat-stroked-button routerLink="/home">
-    <mat-icon aria-hidden="false" arial-label="Home icon" fontIcon="home"></mat-icon>
-    Home
-  </button>
 
-  <button mat-stroked-button [matMenuTriggerFor]="menu">Functions</button>
-  <mat-menu #menu="matMenu">
-    <button mat-menu-item routerLink="/list-bosses">List Bosses</button>
-    <button mat-menu-item routerLink="/list-games">List Games</button>
-    <button mat-menu-item routerLink="/create-boss" *ngIf="this.api.isLoggedIn()">Create Boss</button>
-    <button mat-menu-item routerLink="/create-game" *ngIf="this.api.isLoggedIn()">Create Game</button>
-  </mat-menu>
+  <div>
+    <button mat-stroked-button routerLink="/home">
+      <mat-icon aria-hidden="false" arial-label="Home icon" fontIcon="home"></mat-icon>
+      Home
+    </button>
   
-  <button 
-    mat-stroked-button 
-    routerLink="/register"
-    *ngIf="!this.api.isLoggedIn()"
-  >
-    Register
-  </button>
+    <button mat-stroked-button [matMenuTriggerFor]="menu">Functions</button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item routerLink="/list-bosses">List Bosses</button>
+      <button mat-menu-item routerLink="/list-games">List Games</button>
+      <button mat-menu-item routerLink="/create-boss" *ngIf="this.api.isLoggedIn()">Create Boss</button>
+      <button mat-menu-item routerLink="/create-boss" *ngIf="this.api.isLoggedIn()">Create Game</button>
+    </mat-menu>
+    
+    
+  </div>
 
-  <button 
-    mat-flat-button 
-    color="accent" 
-    routerLink="/login"
-    *ngIf="!this.api.isLoggedIn()"
-  >
-    <mat-icon aria-hidden="false" arial-label="" fontIcon="login"></mat-icon>
-    Login
-  </button>
+  <div>
 
-  <button 
+    <button 
+      mat-stroked-button 
+      routerLink="/register"
+      *ngIf="!this.api.isLoggedIn()"
+    >
+      Register
+    </button>
+  
+    <button 
+      mat-stroked-button 
+      color="accent" 
+      routerLink="/login"
+      *ngIf="!this.api.isLoggedIn()"
+    >
+      <mat-icon aria-hidden="false" arial-label="" fontIcon="login"></mat-icon>
+      Login
+    </button>
+    
+    <button 
     mat-stroked-button 
     color="accent" 
-    routerLink="/logout"
+    routerLink="/profile"
     *ngIf="this.api.isLoggedIn()"
   >
-    <mat-icon aria-hidden="false" arial-label="" fontIcon="logout"></mat-icon>
-    Logout
+    Profile
   </button>
+  
+    <button 
+      mat-stroked-button 
+      color="accent" 
+      routerLink="/logout"
+      *ngIf="this.api.isLoggedIn()"
+    >
+      <mat-icon aria-hidden="false" arial-label="" fontIcon="logout"></mat-icon>
+      Logout
+    </button>
+  </div>
+  
 </nav>
