--- a/KFrontend/Frontend/src/app/navigation/navigation.component.scss
+++ b/KFrontend/Frontend/src/app/navigation/navigation.component.scss
@@ -3,7 +3,23 @@ nav{
 }
 
 nav{
+
+    width: 100%;
+    background-color: black;
+    overflow: hidden;
+    z-index: 1000; /* Ensure the navbar stays on top of other elements */
+    display: flex; /* Use flexbox */
+    justify-content: space-between; /* Align items to the left and right */
+
   button{
-    margin-right: 5px;
+    margin-right: 25px;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+  }
+  button:hover{
+    background-color: #ddd;
+    color: black;
   }
 }
