--- a/KFrontend/Frontend/src/app/create-game/create-game.component.html
+++ b/KFrontend/Frontend/src/app/create-game/create-game.component.html
@@ -1,52 +1,55 @@
-<h1>Create Game</h1>
+<div class="form-container">
+    <h1>Create Game</h1>
 
-<mat-form-field appearance="outline">
-  <mat-label>ID</mat-label>
-  <input matInput
-      disabled
-      [(ngModel)]="this.game.id">
-  <mat-icon matSuffix>text_fields</mat-icon>
-  <mat-hint>ID of the game</mat-hint>
-</mat-form-field>
-
-<mat-form-field appearance="outline">
-    <mat-label>Name</mat-label>
-    <input matInput
-        [(ngModel)]="this.game.gameName">
-    <mat-icon matSuffix>text_fields</mat-icon>
-    <mat-hint>Name of the game</mat-hint>
-</mat-form-field>
-
-<mat-form-field appearance="outline">
-    <mat-label>ReleaseDate</mat-label>
-    <input matInput
-        [(ngModel)]="this.game.releaseDate">
-    <mat-icon matSuffix>text_fields</mat-icon>
-    <mat-hint>Release date of the game</mat-hint>
-</mat-form-field>
-
-
-
-<mat-form-field appearance="outline">
-    <mat-label>Game Cover</mat-label>
-    <input matInput
-        [(ngModel)]="this.game.gameCover">
-    <mat-icon matSuffix>text_fields</mat-icon>
-    <mat-hint>Image of the game cover</mat-hint>
-</mat-form-field>
-
-<mat-form-field appearance="outline">
-    <mat-label>Game Description</mat-label>
-    <input matInput
-        [(ngModel)]="this.game.gameDescription">
-    <mat-icon matSuffix>text_fields</mat-icon>
-    <mat-hint>Description of the game</mat-hint>
-</mat-form-field>
-
-<button
-    mat-flat-button
-    color="accent"
-    (click)="createGame()"
->    
-    Create game
-</button>
+    <mat-form-field appearance="outline">
+      <mat-label>ID</mat-label>
+      <input matInput
+          disabled
+          [(ngModel)]="this.game.id">
+      <mat-icon matSuffix>text_fields</mat-icon>
+      <mat-hint>ID of the game</mat-hint>
+    </mat-form-field>
+    
+    <mat-form-field appearance="outline">
+        <mat-label>Name</mat-label>
+        <input matInput
+            [(ngModel)]="this.game.gameName">
+        <mat-icon matSuffix>text_fields</mat-icon>
+        <mat-hint>Name of the game</mat-hint>
+    </mat-form-field>
+    
+    <mat-form-field appearance="outline">
+        <mat-label>ReleaseDate</mat-label>
+        <input matInput
+            [(ngModel)]="this.game.releaseDate">
+        <mat-icon matSuffix>text_fields</mat-icon>
+        <mat-hint>Release date of the game</mat-hint>
+    </mat-form-field>
+    
+    
+    
+    <mat-form-field appearance="outline">
+        <mat-label>Game Cover</mat-label>
+        <input matInput
+            [(ngModel)]="this.game.gameCover">
+        <mat-icon matSuffix>text_fields</mat-icon>
+        <mat-hint>Image of the game cover</mat-hint>
+    </mat-form-field>
+    
+    <mat-form-field appearance="outline">
+        <mat-label>Game Description</mat-label>
+        <input matInput
+            [(ngModel)]="this.game.gameDescription">
+        <mat-icon matSuffix>text_fields</mat-icon>
+        <mat-hint>Description of the game</mat-hint>
+    </mat-form-field>
+    
+    <button
+        mat-flat-button
+        color="accent"
+        (click)="createGame()"
+    >    
+        Create game
+    </button>
+    
+</div>
