--- a/KFrontend/Frontend/src/app/create-game/create-game.component.scss
+++ b/KFrontend/Frontend/src/app/create-game/create-game.component.scss
@@ -3,6 +3,12 @@ h1 {
 }
 
 mat-form-field, mat-checkbox, button {
-  width: 100%;
+  width: 75%;
   margin-bottom: 30px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
