--- a/KFrontend/Frontend/src/app/navigation/navigation.component.html
+++ b/KFrontend/Frontend/src/app/navigation/navigation.component.html
@@ -11,7 +11,7 @@
       <button mat-menu-item routerLink="/list-bosses">List Bosses</button>
       <button mat-menu-item routerLink="/list-games">List Games</button>
       <button mat-menu-item routerLink="/create-boss" *ngIf="this.api.isLoggedIn()">Create Boss</button>
-      <button mat-menu-item routerLink="/create-boss" *ngIf="this.api.isLoggedIn()">Create Game</button>
+      <button mat-menu-item routerLink="/create-game" *ngIf="this.api.isLoggedIn()">Create Game</button>
     </mat-menu>
     
     
