--- a/KFrontend/Frontend/src/app/navigation/navigation.component.scss
+++ b/KFrontend/Frontend/src/app/navigation/navigation.component.scss
@@ -1,9 +1,8 @@
 nav{
-  margin: 10px;
+  margin: 10px 0px;
 }
 
 nav{
-
     width: 100%;
     background-color: black;
     overflow: hidden;
@@ -12,10 +11,10 @@ nav{
     justify-content: space-between; /* Align items to the left and right */
 
   button{
-    margin-right: 25px;
+    margin-right: 10px;
     color: white;
     text-align: center;
-    padding: 14px 20px;
+    padding: 15px 20px;
     text-decoration: none;
   }
   button:hover{
