--- a/KFrontend/Frontend/src/app/footer/footer.component.html
+++ b/KFrontend/Frontend/src/app/footer/footer.component.html
@@ -9,6 +9,6 @@
   </p>
   <p>
     <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="email"></mat-icon>
-    Email: fromsoftwaregames(a)fromsoftwaregames.com
+    Email: fromsoftwaregames&#64;fromsoftwaregames.com
   </p>
 </footer>
