--- a/KFrontend/Frontend/src/app/create-game/create-game.component.scss
+++ b/KFrontend/Frontend/src/app/create-game/create-game.component.scss
@@ -1,5 +1,7 @@
 h1 {
-  margin-bottom: 50px;
+  margin: 50px 0px;
+  font-size: 2em;
+  text-align: center;
 }
 
 mat-form-field, mat-checkbox, button {
