--- a/KFrontend/Frontend/src/app/login/login.component.html
+++ b/KFrontend/Frontend/src/app/login/login.component.html
@@ -1,33 +1,35 @@
-<h1>Login</h1>
-<!-- [formControl]="this.username"> -->
-
-
-<mat-form-field appearance="outline">
-  <mat-label>Username</mat-label>
-  <input
-      matInput
-      [(ngModel)]="this.loginModel.userName"
-      >
-  <mat-icon matSuffix>email</mat-icon>
-  <mat-hint>Your registered username</mat-hint>
-  <!-- <mat-error *ngIf="this.username.invalid">{{getEmailErrorMessage()}}</mat-error> -->
-</mat-form-field>
-
-<mat-form-field appearance="outline">
-  <mat-label>Password</mat-label>
-  <input 
-      matInput
-      type="password"
-      [(ngModel)]="this.loginModel.password">
-  <mat-icon matSuffix>lock</mat-icon>
-  <mat-hint>Your password used during registration</mat-hint>
-</mat-form-field>
-
-<button
-  mat-flat-button
-  color="accent"
-  (click)="sendLoginCredentials()"
-  [disabled]="!checkInputs()"
->    
-  Login
-</button>
+<div class="form-container">
+  <h1>Login</h1>
+  <!-- [formControl]="this.username"> -->
+  
+  
+  <mat-form-field appearance="outline">
+    <mat-label>Username</mat-label>
+    <input
+        matInput
+        [(ngModel)]="this.loginModel.userName"
+        >
+    <mat-icon matSuffix>email</mat-icon>
+    <mat-hint>Your registered username</mat-hint>
+    <!-- <mat-error *ngIf="this.username.invalid">{{getEmailErrorMessage()}}</mat-error> -->
+  </mat-form-field>
+  
+  <mat-form-field appearance="outline">
+    <mat-label>Password</mat-label>
+    <input 
+        matInput
+        type="password"
+        [(ngModel)]="this.loginModel.password">
+    <mat-icon matSuffix>lock</mat-icon>
+    <mat-hint>Your password used during registration</mat-hint>
+  </mat-form-field>
+  
+  <button
+    mat-flat-button
+    color="accent"
+    (click)="sendLoginCredentials()"
+    [disabled]="!checkInputs()"
+  >    
+    Login
+  </button>
+</div>
