--- a/KFrontend/Frontend/src/app/login/login.component.scss
+++ b/KFrontend/Frontend/src/app/login/login.component.scss
@@ -1,8 +1,18 @@
 h1 {
-  margin-bottom: 50px;
+  margin: 50px 0px;
+  font-size: 2em;
+  text-align: center;
 }
 
 mat-form-field, mat-checkbox, button {
-  width: 100%;
-  margin-bottom: 30px;
+  width: 75%;
+  margin-bottom: 50px;
+  
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 65vh;
 }
