--- a/KFrontend/Frontend/src/app/navigation/navigation.component.html
+++ b/KFrontend/Frontend/src/app/navigation/navigation.component.html
@@ -1,12 +1,11 @@
 <nav>
 
   <div>
-    <button mat-stroked-button routerLink="/home">
-      <mat-icon aria-hidden="false" arial-label="Home icon" fontIcon="home"></mat-icon>
+    <a  routerLink="/home">
       Home
-    </button>
+    </a>
   
-    <button mat-stroked-button [matMenuTriggerFor]="menu">Functions</button>
+    <a  [matMenuTriggerFor]="menu">Functions</a>
     <mat-menu #menu="matMenu">
       <button mat-menu-item routerLink="/list-bosses">List Bosses</button>
       <button mat-menu-item routerLink="/list-games">List Games</button>
@@ -19,42 +18,40 @@
 
   <div>
 
-    <button 
-      mat-stroked-button 
+    <a 
+       
       routerLink="/register"
       *ngIf="!this.api.isLoggedIn()"
     >
       Register
-    </button>
+    </a>
   
-    <button 
-      mat-stroked-button 
+    <a 
+      
       color="accent" 
       routerLink="/login"
       *ngIf="!this.api.isLoggedIn()"
     >
-      <mat-icon aria-hidden="false" arial-label="" fontIcon="login"></mat-icon>
       Login
-    </button>
+    </a>
     
-    <button 
-    mat-stroked-button 
+    <a 
+     
     color="accent" 
     routerLink="/profile"
     *ngIf="this.api.isLoggedIn()"
   >
     Profile
-  </button>
+  </a>
   
-    <button 
-      mat-stroked-button 
+    <a 
+      
       color="accent" 
       routerLink="/logout"
       *ngIf="this.api.isLoggedIn()"
     >
-      <mat-icon aria-hidden="false" arial-label="" fontIcon="logout"></mat-icon>
       Logout
-    </button>
+    </a>
   </div>
   
 </nav>
