--- a/KFrontend/Frontend/src/app/navigation/navigation.component.scss
+++ b/KFrontend/Frontend/src/app/navigation/navigation.component.scss
@@ -1,23 +1,21 @@
 nav{
-  margin: 10px 0px;
-}
-
-nav{
     width: 100%;
-    background-color: black;
+    background-color: #333;
     overflow: hidden;
-    z-index: 1000; /* Ensure the navbar stays on top of other elements */
-    display: flex; /* Use flexbox */
-    justify-content: space-between; /* Align items to the left and right */
+    z-index: 1000;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0;
+    font-size: 1.1rem;
 
-  button{
+  a{
     margin-right: 10px;
     color: white;
     text-align: center;
     padding: 15px 20px;
     text-decoration: none;
   }
-  button:hover{
+  a:hover{
     background-color: #ddd;
     color: black;
   }
