--- a/KFrontend/Frontend/src/app/register/register.component.scss
+++ b/KFrontend/Frontend/src/app/register/register.component.scss
@@ -1,8 +1,16 @@
 h1 {
-  margin-bottom: 50px;
+  margin: 50px 0px;
+  font-size: 2em;
+  text-align: center;
 }
 
 mat-form-field, mat-checkbox, button {
-  width: 100%;
+  width: 75%;
   margin-bottom: 30px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
