--- a/KFrontend/Frontend/src/app/update-delete-game/update-delete-game.component.scss
+++ b/KFrontend/Frontend/src/app/update-delete-game/update-delete-game.component.scss
@@ -1,5 +1,16 @@
-h1{
+h1 {
   margin: 50px 0px;
   font-size: 2em;
   text-align: center;
+}
+
+mat-form-field, mat-checkbox, button {
+  width: 75%;
+  margin-bottom: 30px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
