--- a/KFrontend/Frontend/src/app/view-games/view-games.component.scss
+++ b/KFrontend/Frontend/src/app/view-games/view-games.component.scss
@@ -61,6 +61,7 @@ h2 {
 
 p{
   font-size: 2.5vh;
+  line-height: 40px;
 }
 
 h1, h2, p {
@@ -97,4 +98,31 @@ h1, h2, p {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+
+.functions{
+  display: flex;
+  justify-content: space-evenly;
+  overflow: hidden;
+  z-index: 1000;
+  padding: 20px 0;
+  font-size: 1.1rem;
+  
+}
+
+a{
+  background-color: #333;
+  margin-right: 10px;
+  color: white;
+  text-align: center;
+  padding: 15px 20px;
+  text-decoration: none;
+  margin: 0 10px;
+  border-radius: 10px;
+}
+
+a:hover{
+  background-color: #ddd;
+  color: black;
+
 }
