--- a/KFrontend/Frontend/src/app/update-delete-boss/update-delete-boss.component.html
+++ b/KFrontend/Frontend/src/app/update-delete-boss/update-delete-boss.component.html
@@ -83,7 +83,7 @@
       color="accent"
       (click)="updateBoss()"
   >    
-      Update subject
+      Update Boss
   </button>
   
   <mat-divider></mat-divider>
@@ -100,6 +100,6 @@
       [disabled]="this.deleteDisabled"
       (click)="deleteBoss(this.boss.bossName)"
   >    
-      Delete subject
+      Delete Boss
   </button>
 </div>
