--- a/KFrontend/Frontend/src/app/update-delete-game/update-delete-game.component.html
+++ b/KFrontend/Frontend/src/app/update-delete-game/update-delete-game.component.html
@@ -39,7 +39,7 @@
       color="accent"
       (click)="updateGame()"
   >    
-      Update subject
+      Update Game
   </button>
   
   <mat-divider></mat-divider>
@@ -56,7 +56,7 @@
       [disabled]="this.deleteDisabled"
       (click)="deleteGame(this.game.gameName)"
   >    
-      Delete subject
+      Delete Game
   </button>
 
 </div>
