--- a/KFrontend/Frontend/src/app/list-bosses/list-bosses.component.html
+++ b/KFrontend/Frontend/src/app/list-bosses/list-bosses.component.html
@@ -1,8 +1,9 @@
 <h1>All of the bosses that can be found in the games</h1>
 
+<input type="text" placeholder="Search bosses..." [(ngModel)]="searchTerm" class="search-bar">
 
 <div class="gridDisplay">
-  <mat-card class="example-card" *ngFor="let boss of bosses">
+  <mat-card class="example-card" *ngFor="let boss of filteredBosses()">
   
     <mat-card-header>
       <mat-card-title-group>
