visibility icon added

--- a/KFrontend/Frontend/src/app/list-bosses/list-bosses.component.html
+++ b/KFrontend/Frontend/src/app/list-bosses/list-bosses.component.html
@@ -22,7 +22,7 @@
         mat-stroked-button
         [routerLink]="['/view-boss/', boss.bossName]"
       >
-        <mat-icon arial-hidden="false"  aria-label="Edit icon" fontIcon="edit">
+        <mat-icon arial-hidden="false"  aria-label="View icon" fontIcon="visibility">
         </mat-icon>
         View Boss
       </button>
