progress component created with showing the users defeated bosses

--- a/KFrontend/Frontend/src/app/navigation/navigation.component.html
+++ b/KFrontend/Frontend/src/app/navigation/navigation.component.html
@@ -13,7 +13,13 @@
       <button mat-menu-item routerLink="/create-game" *ngIf="this.api.isLoggedIn()">Create Game</button>
     </mat-menu>
     
-    
+    <a  routerLink="/statistics">
+      Statistics
+    </a>
+
+    <a  routerLink="/progress" *ngIf="this.api.isLoggedIn()">
+      Progress
+    </a>
   </div>
 
   <div>
