--- a/KFrontend/Frontend/src/app/login/login.component.html
+++ b/KFrontend/Frontend/src/app/login/login.component.html
@@ -1,17 +1,21 @@
-<div class="form-container">
+<div class="form-container" [formGroup]="logFormGroup">
   <h1>Login</h1>
-  <!-- [formControl]="this.username"> -->
   
   
   <mat-form-field appearance="outline">
     <mat-label>Username</mat-label>
     <input
         matInput
+        formControlName="username"
         [(ngModel)]="this.loginModel.userName"
         >
-    <mat-icon matSuffix>email</mat-icon>
+    <mat-icon matSuffix>text_fields</mat-icon>
     <mat-hint>Your registered username</mat-hint>
-    <!-- <mat-error *ngIf="this.username.invalid">{{getEmailErrorMessage()}}</mat-error> -->
+    <div>
+      <small class="error-message">
+          {{errorMsgLog('username')}}
+      </small>
+  </div>
   </mat-form-field>
   
   <mat-form-field appearance="outline">
@@ -19,9 +23,16 @@
     <input 
         matInput
         type="password"
-        [(ngModel)]="this.loginModel.password">
+        [(ngModel)]="this.loginModel.password"
+        formControlName="pw"
+        >
     <mat-icon matSuffix>lock</mat-icon>
     <mat-hint>Your password used during registration</mat-hint>
+    <div>
+      <small class="error-message">
+          {{errorMsgLog('pw')}}
+      </small>
+  </div>
   </mat-form-field>
   
   <button
