--- a/KFrontend/Frontend/src/app/update-delete-boss/update-delete-boss.component.html
+++ b/KFrontend/Frontend/src/app/update-delete-boss/update-delete-boss.component.html
@@ -98,7 +98,7 @@
       mat-flat-button
       color="warn"
       [disabled]="this.deleteDisabled"
-      (click)="deleteBoss(this.boss.bossName)"
+      (click)="deleteBoss(this.boss.id)"
   >    
       Delete Boss
   </button>
