--- a/KFrontend/Frontend/src/app/view-boss/view-boss.component.html
+++ b/KFrontend/Frontend/src/app/view-boss/view-boss.component.html
@@ -6,7 +6,7 @@
     <div class="profile-content">
       <h1>
           {{this.boss.bossName}} 
-          <button mat-raised-button [routerLink]="['/updatedelete-boss/', boss.bossName]">
+          <button mat-raised-button [routerLink]="['/updatedelete-boss/', boss.id]">
             Update
           </button>
       </h1>
